Add Emilia dataset processing pipeline with SLURM integration
- Complete shard processing pipeline for Emilia dataset tokenization using Mimi
- Resumable download, extraction, and audio processing with JSON caching
- SLURM job submission scripts with concurrency control and node exclusion
- Progress monitoring and HuggingFace dataset upload functionality
- Utility scripts for job management and progress tracking

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ mls-en-mimi-pretrain/test.ipynb
 
 # LibriSpeech
 librispeech-mimi/tmp_parquets/
+
+# Emilia
+emilia-mimi/emilia-mm-pretrain
+emilia-mimi/file_lists/*-shuffled.txt
