Add Emilia-Mimi conversational processing scripts
- Only process Emilia-Yodas as it has SPEAKER_XX
- Uses sesame style notation: [0]{text}

--- a/.gitignore
+++ b/.gitignore
@@ -80,4 +80,5 @@ librispeech-mimi/tmp_parquets/
 
 # Emilia
 emilia-mimi/emilia-mm-pretrain
+emilia-mimi/emilia-mm-conversational
 emilia-mimi/file_lists/*-shuffled.txt
