Add scripts to process Yodas2-mm-pretrain into Yodas2-mm-asr

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ yodas2-mimi/yodas2-mm
 yodas2-mimi/*.log
 yodas2-mimi/*.json
 yodas2-mimi/testing
+yodas2-mimi/logs_asr/
+yodas2-mimi/tmp/
 
 examples/
 
