Add common voice Mimi processing

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ librispeech-mimi/tmp_parquets/
 emilia-mimi/emilia-mm-pretrain
 emilia-mimi/emilia-mm-conversational
 emilia-mimi/file_lists/*-shuffled.txt
+
+# CommonVoice17
+common-voice-mimi/logs/
