--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ yodas2-mimi/*.log
 yodas2-mimi/*.json
 yodas2-mimi/testing
 yodas2-mimi/logs_asr/
+yodas2-mimi/logs_acoustic/
 yodas2-mimi/tmp/
 
 examples/
